[package]
name = "rocket_auth2"
version = "0.6.2"
authors = ["tvallotton@uc.cl", "michalmoczulski1a@gmail.com"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A high level authentication management library for Rocket applications. It supports both SQLite and Postgres."
repository = "https://github.com/michalmoc/rocket_auth"

readme = "README.md"
categories = ["web-programming"]
keywords = ["rocket", "users", "authentication", "auth", "session"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true


[features]
sqlx-sqlite = ["sqlx/sqlite"]
sqlx-postgres = ["sqlx/postgres"]
sqlx-mysql = ["sqlx/mysql"]
sled = ["dep:sled"]


[dependencies]
rand = ">=0.9"
rust-argon2 = ">=2.1"
regex = ">=1.11"
serde_json = ">=1.0.138"
chashmap = ">=2.2.2"
thiserror = ">=2.0.11"
async-trait = ">=0.1.86"
chrono = ">=0.4.39"
validator = { version = ">=0.20.0", features = ["derive", "unic"] }
futures = ">=0.3.31"
bson = { version = "2.13" }
sled = { version = ">=0.34", optional = true }


[dependencies.rusqlite]
version = "0.31.0"
optional = true

[dependencies.sqlx]
version = ">=0.6.0"
optional = true

[dependencies.rocket]
version = ">=0.5.0"
features = ["secrets"]

[dependencies.serde]
version = ">=1.0.217"
features = ["derive"]

[dependencies.tokio-postgres]
version = "0.7.13"
optional = true


[dependencies.redis]
version = "0.29"
features = ["aio", "tokio-comp"]
optional = true

[dependencies.tokio]
version = "1.43"
features = ["rt", "rt-multi-thread"]


[dev-dependencies]
tokio-postgres = "0.7.6"


[dev-dependencies.rocket]
version = ">=0.5.0"
features = ["secrets", "json"]

[dev-dependencies.redis]
version = "0.29"
features = ["aio", "tokio-comp"]


[dev-dependencies.rocket_dyn_templates]
version = ">=0.2.0"
features = ["tera"]


[dev-dependencies.sqlx]
version = ">=0.8.0"
features = ["runtime-tokio-rustls"]

[dev-dependencies.rocket_auth2]
path = "../rocket_auth"
features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "redis",
    "tokio-postgres",
    "rusqlite",
    "sled"
]
